# VideoLighter

./: .gitignore  README.md  SERVICE_OVERVIEW.md  polar.txt  project.md
desktop-app/: package-lock.json  package.json  tsconfig.json
desktop-app/scripts/: sync-version.mjs
desktop-app/src/: App.tsx  constants.ts  lib.ts  types.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src/components/: ActivationModal.tsx  BottomBar.tsx  Header.tsx  SettingsPanel.tsx  Sidebar.tsx
html-reference/: index.html  legal.html  mypage.html  style.css  success.html
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
web/public/: robots.txt  sitemap.xml
web/src/: App.tsx  i18n.ts  index.css  main.tsx
web/src/components/: Analytics.tsx  LegalModal.tsx  ProtectedRoute.tsx  SEO.tsx
web/src/hooks/: useAuth.tsx  useTheme.tsx
web/src/pages/: AdminPage.tsx  Home.tsx  MyPage.tsx
web/supabase/functions/check-free-quota/: index.ts
web/supabase/functions/polar-webhook/: index.ts
web/supabase/functions/verify-license/: index.ts
web/supabase/migrations/: 20260213_add_free_daily_usage.sql
