[package]
name = "videolighter"
version = "1.0.0"
description = "VideoLighter Desktop Application"
edition = "2021"

[lib]
name = "videolighter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-fs = "2.0"
trash = "5.1"
machine-uid = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
